--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
-@import url("./normalize.css");
-@import url("../blocks/page.css");
-@import url("../blocks/header.css");
-@import url("../blocks/main.css");
-@import url("../blocks/footer.css");
-@import url("../blocks/popup.css");
+@import url("./pages/normalize.css");
+@import url("./blocks/page.css");
+@import url("./blocks/header.css");
+@import url("./blocks/main.css");
+@import url("./blocks/footer.css");
+@import url("./blocks/popup.css");
