--- a/src/blocks/popup.css
+++ b/src/blocks/popup.css
@@ -48,6 +48,7 @@
   height: auto;
   flex-direction: column;
   margin: 0 auto;
+  box-sizing: border-box;
 }
 
 .popup__button-close {
@@ -63,14 +64,13 @@
 .form,
 .form__add {
   width: 430px;
-  height: 100%;
+  padding-bottom: 40px;
   background-color: #fff;
   color: #000;
   display: flex;
   flex-direction: column;
   gap: 25px;
   border-radius: 10px;
-  margin: auto;
   box-sizing: border-box;
   position: relative;
 }
