add: AddCard functionality

--- a/src/blocks/popup.css
+++ b/src/blocks/popup.css
@@ -14,7 +14,7 @@
   display: none;
 }
 
-.popup__image-content {
+.popup-image-content {
   display: flex;
   justify-content: center;
   position: relative;
